tests/compile_fail/wrong_command_scope.zig
const vk = @import("vulkan");

const WrongScope = @TypeOf(
    @as(*const vk.Instance, undefined).load(vk.command.queue_submit),
);

comptime {
    _ = WrongScope;
}
